SchemaModifier- basic impl
Signed-off-by: Stefan <stbischof@bipolis.org>